# T-fractal-generator

./: LICENSE  README.md  TFractalGenerator.cabal
app/: Main.hs  Utils.hs
app/Fractal/: Generator.hs  SDL.hs  Type.hs
app/SDL/: Draw.hs  Event.hs  Loop.hs  State.hs
app/SDL/Settings/: Export.hs  Parse.hs  Type.hs
